  for the template. This also allows us to use the more logical
  auto_reload flag instead of reusing PROD_MODE, which is also used
  for other purposes.
  [wichert]

- Treat comments, processing instructions, and named entities in the
  source template as "literals", which will be rendered into the
  output unchanged. [chrism]

  Bugfixes

- Support "fill-slot" on elements with METAL namespace. [malthe]
  
- Omit element text when rendering macro. [malthe]
  
- ``Macros`` class should not return callable functions, but rather a
  ``Macro`` object, which has a ``render``-method. This makes it
  possible to use a path-expression to get to a macro without calling
  it. [malthe]
  
- Fixed bug where a repeat-clause would reset the repeat variable
  before evaluating the expression. [malthe]
  
- Fixed an issue related to correct restoring of ghosted template
  objects. [malthe]

- Implicit doctype is correctly reestablished from cache. [malthe]

- Remove namespace declaration on root tag to work around syntax error
  raised when parsing an XML tree loaded from the file cache. [malthe]

- Attribute assignments with an expression value that started with the
  characters ``in`` (e.g. ``info.somename``) would be rendered to the
  generated Python without the ``in`` prefix (as
  e.g. ``fo.somename``). [chrism]

- When filling METAL slots (possibly with a specific version of
  libxml2, I am using 2.6.32) it was possible to cause the translator
  to attempt to add a stringtype to a NoneType (on a line that reads
  ``variable = self.symbols.slot+element.node.fill_slot`` because an
  XPath expression looking for fill-slot nodes did not work
  properly). [chrism]

- Preserve whitespace in string translation expressions. [malthe]
  
- Fixed interpolation bug where multiple attributes with interpolation
  expressions would result in corrupted output. [malthe]

- Support try-except operator ('|') when 'python' is the default
  expression type. [malthe]
  